Updated Employee period and attendance apis